adding new things

--- a/assignment2/src/main/resources/application-docker.properties
+++ b/assignment2/src/main/resources/application-docker.properties
@@ -11,3 +11,4 @@ spring.datasource.maxIdle = 1
 spring.main.allow-bean-definition-overriding=true
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
+spring.profiles.active=prod
