--- a/assignment2/src/main/resources/application.properties
+++ b/assignment2/src/main/resources/application.properties
@@ -5,6 +5,8 @@ server.port= 8080
 spring.datasource.url = jdbc:mysql://mysqldb:3306/web-services
 spring.datasource.username = root
 spring.datasource.password = root
+spring.datasource.platform=mysql
+spring.datasource.initialization-mode=always
 spring.datasource.timeBetweenEvictionRunsMillis = 60000
 spring.datasource.maxIdle = 1
 #below properties will automatically creates and updates database schema
